# kurapika

./: .gitignore  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE  bazel-bin  bazel-genfiles  bazel-kurapika  bazel-out  bazel-testlogs  go.mod  go.sum  main.go
clients/: BUILD.bazel  mobsf.go
config/: base.yaml
docker/gplaycli/: Dockerfile
handlers/: BUILD.bazel  new_app.go  scan_apk.go
